3.3.1
-----
1. Fix 'Copy browse selection here'
2. Fix removing selected items from queue.
3. Only check for local files if 'Music and Artist Information' is installed.
4. Don't show tech info in desktop bottom bar if using large fonts and showing
   ratings - not enough space.
5. Ensure screensaver always starts in center.
6. Fix dropping from browse onto empty queue.

3.3.0
-----
 1. Material-3 like bottom navigation bar for mobile layout.
 2. Material-3 like switches.
 3. More rounded dialogs.
 4. Remove shadows from dialogs, volume popup, and menus.
 5. Less rounded chips.
 6. Add 'Kiosk' mode; hide all main menu items (except custom actions), and
    allow configuring which actions are available.
 7. Refactor volume handling to throttle volume change requests.
 8. Better layout of now playing when using very wide views.
 9. If sorting of favourites is enabled, then also sort 'Radio / My Presets'
10. Add some missing shortcut in tooltips.
11. Fix 'Esc' closing dialog and then parent dialog.
12. Better duplicate 'time' fix.
13. Strip HTML tags for browse item tooltips.
14. Handle text items (max 2 lines) when showing over 100 items in a list.
15. Only show total library duration if there are tracks in library.
16. Only show library last update date if valid.
17. Don't remove icons in favourites just because they are all the same.
18. Fix 'Play next' when invoked from header of multi-disc album.
20. When prompting to clear queue ask if all tracks, upcoming, or previous
    should be removed.
21. Disable context menu (long-press) for items on mobile devices.
22. Dim screensaver text.
23. Move screensaver text position to random location every 10 minutes.
24. Add 'Remove duplicates' to queue 'Actions' menu.

3.2.4
-----
1. Fix missing icon for 'More' entry of now-playing menu.
2. Ignore some clicks on now-playing page if a menu is open.
3. Remove 'Years' option from genre listing - e.g.
   'My Music / Genres / <genre> / Years'. Because 'years' command does not