@@ -1,3 +1,8 @@
+3.x.x
+-----
+1. Add 'Local artwork' entry to album track list menu.
+2. If show list of images automatically open viewer on first image.
+
 3.3.1
 -----
 1. Fix 'Copy browse selection here'
